@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-06T01:14:48Z",
+  "timestamp" : "2022-08-06T08:18:09Z",
   "count_outdated" : 433,
   "uniques_outdated" : 250,
   "count" : 470,
-  "uniques" : 268,
+  "uniques" : 269,
   "clones" : [
     {
       "timestamp": "2022-07-23T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-08-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
