@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-07-23T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-08-05T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
